<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_LVfromArray" android:title="@string/action_LVfromArray"
        android:orderInCategory="110" app:showAsAction="never" />

    <item android:id="@+id/action_show" android:title="@string/action_show"
        android:orderInCategory="120" app:showAsAction="never" />

    <item android:id="@+id/action_insert" android:title="@string/action_insert"
        android:orderInCategory="130" app:showAsAction="ifRoom" />

    <item android:id="@+id/action_quit" android:title="@string/action_quit"
        android:orderInCategory="200" app:showAsAction="never" />
</menu>
